--- a/src/code/Microsoft.PowerShell.TextUtility.csproj
+++ b/src/code/Microsoft.PowerShell.TextUtility.csproj
@@ -9,8 +9,10 @@
         <FileVersion>1.0.0</FileVersion>
         <InformationalVersion>1.0.0</InformationalVersion>
         <TargetFramework>netstandard2.0</TargetFramework>
-    </PropertyGroup>
-
+        <IsPackable>true</IsPackable>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+  
     <ItemGroup>
         <PackageReference Include="PowerShellStandard.Library" Version="5.1.0-*" />
     </ItemGroup>
