fix CI build title

--- a/yaml/ci.yml
+++ b/yaml/ci.yml
@@ -1,4 +1,4 @@
-name: PR-$(System.PullRequest.PullRequestNumber)-$(Date:yyyyMMdd)$(Rev:.rr)
+name: $(Date:yyyyMMdd)$(Rev:.rr)
 trigger:
   # Batch merge builds together while a merge build is running
   batch: true
