--- a/src/code/Microsoft.PowerShell.TextUtility.csproj
+++ b/src/code/Microsoft.PowerShell.TextUtility.csproj
@@ -14,7 +14,9 @@
   </PropertyGroup>
   
     <ItemGroup>
-        <PackageReference Include="PowerShellStandard.Library" Version="5.1.0-*" />
+        <PackageReference Include="PowerShellStandard.Library" Version="5.1.0-*">
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
