--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ project.lock.json
 
 # VSCode directories that are not at the repository root
 /**/.vscode/
+
+# Visual Studio per user directories
+.vs/
