--- a/yaml/releaseBuild.yml
+++ b/yaml/releaseBuild.yml
@@ -92,6 +92,12 @@ stages:
         # https://github.com/isaacs/minimatch#features
         useMinimatch: false
   
+    - ${{ if ne(variables.SkipSigning, 'True') }}:
+      - template: Sbom.yml@ComplianceRepo
+        parameters:
+          BuildDropPath: $(signOutputPath)
+          Build_Repository_Uri: 'https://github.com/powershell/textutility'
+  
     - pwsh: |
         New-Item -Path $(Build.SourcesDirectory)/SignedZip -ItemType Directory -ErrorAction Ignore
         Compress-Archive -Path $(Build.SourcesDirectory)/Microsoft.PowerShell.TextUtility -DestinationPath $(Build.SourcesDirectory)/SignedZip/Microsoft.PowerShell.TextUtility.zip -Force
