fix yaml for pool

--- a/yaml/releaseBuild.yml
+++ b/yaml/releaseBuild.yml
@@ -67,7 +67,8 @@ stages:
     - group: ESRP
     displayName: Signing Build
     dependsOn: 'ReleaseBuild'
-    pool: PowerShell1ES
+    pool:
+      name: PowerShell1ES
       demands:
       - ImageOverride -equals PSMMS2019-Secure
     steps:
