Install Pester 4.10.1 if it is not available.
Also create xml result file.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ obj/
 out/
 project.lock.json
 .DS_Store
+Microsoft.PowerShell.TextUtility.xml
 
 # VSCode directories that are not at the repository root
 /**/.vscode/
