--- a/yaml/releaseBuild.yml
+++ b/yaml/releaseBuild.yml
@@ -1,4 +1,4 @@
-name: $(Date:yyyyMMdd)$(Rev:.rr)
+name: TextUtility-Release-$(Date:yyyyMMdd)$(Rev:.rr)
 
 variables:
   # Don't download unneeded packages
@@ -7,29 +7,10 @@ variables:
   # Improve performance by not sending telemetry
   - name: DOTNET_CLI_TELEMETRY_OPTOUT
     value: 'true'
+  - name: POWERSHELL_TELEMETRY_OPTOUT
+    value: 1
 
-trigger:
-  batch: true
-  branches:
-    include:
-      - main
-  paths:
-    exclude:
-      - /.dependabot/*
-      - /.poshchan/*
-      - /.github/**/*
-      - /.vscode/**/*
-      - /.vsts-ci/misc-analysis.yml
-      - /tools/**/*
-      - .editorconfig
-      - .gitattributes
-      - .gitignore
-      - /docs/**/*
-      - /CHANGELOG.md
-      - /CONTRIBUTING.md
-      - /README.md
-      - /LICENSE.txt
-      - /CODE_OF_CONDUCT.md
+trigger: none
 
 resources:
   repositories:
@@ -37,6 +18,7 @@ resources:
     type: github
     endpoint: ComplianceGHRepo
     name: PowerShell/compliance
+    ref: master
 
 stages:
 - stage: BuildAndSign
@@ -67,7 +49,7 @@ stages:
         Remove-Item -Path $(Build.SourcesDirectory)/out -Recurse -Force -ErrorAction Ignore
         Remove-Item -Path $(Build.SourcesDirectory)/signed -Recurse -Force -ErrorAction Ignore
         .\build.ps1 -Clean
-        Remove-Item .\out\*.pdb
+        # Remove-Item .\out\*.pdb
         $packageVersion = (Import-PowerShellDataFile $(Build.SourcesDirectory)/out/Microsoft.PowerShell.TextUtility/Microsoft.PowerShell.TextUtility.psd1).ModuleVersion
         $vstsCommandString = "vso[task.setvariable variable=PackageVersion]$packageVersion"
         Write-Host ("sending " + $vstsCommandString)
